// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AddExpenseForm Add Expense 1`] = `
.emotion-1 {
  margin: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-0 {
  min-width: 9rem !important;
}

<div
  className="emotion-1"
>
  <div
    className="ui action input"
  >
    <input
      onChange={[Function]}
      placeholder="Expense"
      type="text"
      value=""
    />
    <div
      aria-expanded={false}
      className="ui selection dropdown emotion-0"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      role="listbox"
      tabIndex={0}
    >
      <div
        aria-atomic={true}
        aria-live="polite"
        className="default text"
        role="alert"
      >
        Date
      </div>
      <i
        aria-hidden="true"
        className="dropdown icon"
        onClick={[Function]}
      />
      <div
        className="menu transition"
      >
        <div
          aria-checked={false}
          aria-selected={true}
          className="selected item"
          onClick={[Function]}
          role="option"
          style={
            Object {
              "pointerEvents": "all",
            }
          }
        >
          <span
            className="text"
          >
            Date
          </span>
        </div>
      </div>
    </div>
    <div
      className="ui teal right attached disabled button"
      onClick={[Function]}
      role="button"
      tabIndex={-1}
    >
      Submit
    </div>
  </div>
</div>
`;

exports[`Storyshots ExpenseCharts Expense Chart 1`] = `
<div>
  <div
    className="recharts-responsive-container"
    style={
      Object {
        "height": 400,
        "maxHeight": undefined,
        "minHeight": undefined,
        "minWidth": undefined,
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "display": "none",
          "height": 0,
          "position": "absolute",
          "visibility": "hidden",
          "width": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Layout Layout 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-height: 100vh;
}

.emotion-0 {
  background: #fff !important;
  margin-bottom: 1rem !important;
}

.emotion-1 {
  margin-top: 5rem;
}

.emotion-3 {
  margin-top: auto;
  text-align: center;
  padding: 1.5rem 0;
}

<div
  className="emotion-4"
>
  <div
    className="ui huge pointing secondary top fixed emotion-0 menu"
  >
    <div
      className="ui container"
    >
      <a
        className="active item"
        onClick={[Function]}
      >
        Home
      </a>
      <a
        className="item"
        onClick={[Function]}
      >
        About
      </a>
      <a
        className="item"
        onClick={[Function]}
      >
        Contact
      </a>
      <a
        className="right item"
        onClick={[Function]}
      >
        Log in
      </a>
    </div>
  </div>
  <div
    className="emotion-1"
  />
  <div
    className="emotion-3"
  >
    <div
      className="emotion-2"
    >
      <div
        className="ui divider"
      />
      <h4>
        Copyright © 2020 kozukata1993 All Rights Reserved.
      </h4>
    </div>
  </div>
</div>
`;

exports[`Storyshots Link First 1`] = `
<button
  onClick={[Function]}
  type="button"
>
  Go to "second"
</button>
`;

exports[`Storyshots Link Second 1`] = `
<button
  onClick={[Function]}
  type="button"
>
  Go to "first"
</button>
`;

exports[`Storyshots LoginForm Login Form 1`] = `
<div
  className="ui basic segment"
>
  <div
    className="ui center aligned middle aligned grid"
  >
    <div
      className="row"
    >
      <div
        className="column"
        style={
          Object {
            "maxWidth": 500,
          }
        }
      >
        <h1
          className="ui blue center aligned header"
        >
          Log in
        </h1>
        <form
          className="ui large form"
          onSubmit={[Function]}
        >
          <div
            className="required field"
          >
            <div
              className="field"
            >
              <div
                className="ui fluid left icon input"
              >
                <input
                  aria-describedby={null}
                  onChange={[Function]}
                  placeholder="E-mail address"
                  type="text"
                />
                <i
                  aria-hidden="true"
                  className="at icon"
                  onClick={[Function]}
                />
              </div>
            </div>
            <div
              className="field"
            >
              <div
                className="ui fluid left icon input"
              >
                <input
                  aria-describedby={null}
                  onChange={[Function]}
                  placeholder="Password"
                  type="password"
                />
                <i
                  aria-hidden="true"
                  className="lock icon"
                  onClick={[Function]}
                />
              </div>
            </div>
            <div
              className="field"
            >
              <button
                aria-describedby={null}
                className="ui blue large fluid button"
                onClick={[Function]}
              >
                Log in
              </button>
            </div>
          </div>
          <div
            className="ui horizontal divider"
          >
            or
          </div>
          <h3
            className="ui header"
          >
            Log in with ...
          </h3>
        </form>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="column"
        style={
          Object {
            "maxWidth": 800,
          }
        }
      >
        <button
          className="ui google plus button"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="google icon"
            onClick={[Function]}
          />
          Google
        </button>
        <button
          className="ui facebook button"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="facebook icon"
            onClick={[Function]}
          />
          Facebook
        </button>
        <button
          className="ui twitter button"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="twitter icon"
            onClick={[Function]}
          />
          Twitter
        </button>
        <button
          className="ui grey button"
          data-testid="loginAnonymously"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="user icon"
            onClick={[Function]}
          />
          Anonymously
        </button>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="column"
        style={
          Object {
            "maxWidth": 400,
          }
        }
      >
        <div
          className="ui message"
        >
          New to us? Sign Up
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots MyTable My Table 1`] = `
<table
  className="ui table"
>
  <tbody
    className=""
  >
    <table
      className="ui very basic table"
    >
      <thead
        className=""
      >
        <tr
          className=""
        >
          <th
            className="five wide"
          >
            Date
          </th>
          <th
            className="five wide"
          >
            Amount
          </th>
          <th
            className="six wide"
          >
            Action
          </th>
        </tr>
      </thead>
      <tbody
        className=""
      >
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/5
          </td>
          <td
            className=""
          >
            5000
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/4
          </td>
          <td
            className=""
          >
            4000
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/3
          </td>
          <td
            className=""
          >
            3000
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/2
          </td>
          <td
            className=""
          >
            2000
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
        <tr
          className=""
        >
          <td
            className=""
          >
            2020/1/1
          </td>
          <td
            className=""
          >
            1000
          </td>
          <td
            className=""
          >
            <button
              className="ui teal basic button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="edit icon"
                onClick={[Function]}
              />
              Edit
            </button>
            <button
              className="ui red basic button"
              onClick={[Function]}
            >
              <i
                aria-hidden="true"
                className="trash icon"
                onClick={[Function]}
              />
              Delete
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </tbody>
</table>
`;

exports[`Storyshots Storybook Knobs As Dynamic Variables 1`] = `
<div>
  I am James and I'm 35 years old.
</div>
`;

exports[`Storyshots Storybook Knobs With A Button 1`] = `
<button
  disabled={false}
  type="button"
>
  Hello Storybook
</button>
`;

exports[`Storyshots actionButton Button 1`] = `
<button
  className="ui button"
  onClick={[Function]}
>
  Click Here
</button>
`;
